[package]
name = "l19_theraflu"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "^1.10.23"
solana-sdk = "^1.10.23"
ed25519-dalek = "^1.0.1"
colored = "2.0.0"
bs58 = "0.4.0"
anyhow = "^1.0.57"
toml = "^0.5.9"
chrono = "^0.4.19"
hyper = { version = "^0.14.19", features = ["client", "http1", "http2", "runtime"] }
hyper-tls = "^0.5.0"
tokio = { version = "*", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = { version = "*", features = ["default", "std", "alloc"] }
serde = { version = "*", features = ["default", "derive"] }
spl-token = { version = "3.0.0-pre1", features = ["no-entrypoint"] } # serum program reqs
bincode = "^1.3.3"
base64 = "^0.13.0"
rand = "^0.8.5"
